Issue #SB-14002 fix: Card badge alignment in Urdu

--- a/src/app/client/src/assets/styles/components/_buttons.scss
+++ b/src/app/client/src/assets/styles/components/_buttons.scss
@@ -667,5 +667,5 @@ a.sb-btn {
 }
 
 *[lang="hi"] .sb-btn-normal {
-  line-height: 2.2;
+  line-height: 1.5;
 }
